Fixed pdf invoice overlap issue

--- a/app/assets/stylesheets/pdf.css.scss
+++ b/app/assets/stylesheets/pdf.css.scss
@@ -29,7 +29,7 @@
 
   .invoice_preview_content{
     width: 100%;
-    padding: 0px 29px 0 29px;
+    padding: 50px 29px 0 29px;
   }
   .preview_content_top{
     padding-bottom: 11px;
